add builders for portable apps (Windows and Linux)